--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean": "react-native clean",
+    "pod-install": "cd ios && pod install"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
@@ -15,17 +17,15 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
-    "core-js": "^3.38.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
-    "openai": "^4.67.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-date-ranges": "^2.5.0",
-    "react-native-daterange-picker": "^1.5.1",
+    "react-native-config": "^1.5.1",
+    "react-native-date-picker": "^5.0.4",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.18.0",
-    "react-native-modals": "^0.22.3",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.2.0"
