--- a/package.json
+++ b/package.json
@@ -1,53 +1,51 @@
 {
-  "name": "travelplanner",
-  "version": "0.0.1",
-  "private": true,
+  "name": "travel-planner",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "bash -c 'react-native run-android'",
-    "ios": "react-native run-ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "build:android": "eas build --platform android",
+    "build:ios": "eas build --platform ios",
+    "submit:android": "eas submit --platform android",
+    "submit:ios": "eas submit --platform ios",
     "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest",
-    "clean": "react-native clean",
-    "pod-install": "cd ios && pod install"
+    "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-google-signin/google-signin": "^13.1.0",
+    "expo": "~50.0.0",
+    "expo-status-bar": "~1.11.1",
+    "expo-font": "~11.10.3",
+    "expo-google-sign-in": "~12.0.1",
+    "expo-location": "~16.5.5",
+    "expo-constants": "~15.4.6",
+    "expo-secure-store": "~12.8.1",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-maps": "1.10.0",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-config": "^1.5.1",
-    "react-native-date-picker": "^5.0.4",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "^1.18.0",
-    "react-native-modal": "^13.0.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-date-picker": "^5.0.4",
+    "react-native-modal": "^13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.83",
-    "@react-native/eslint-config": "0.74.83",
-    "@react-native/metro-config": "0.74.83",
-    "@react-native/typescript-config": "0.74.83",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "@expo/webpack-config": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
-  "engines": {
-    "node": ">=18"
-  }
+  "private": true
 }
