--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-**/.xcode.env.local
+project.xcworkspace
 
 # Android/IntelliJ
 #
@@ -40,6 +40,12 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+!debug.keystore
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
@@ -52,24 +58,38 @@ yarn-error.log
 **/fastlane/screenshots
 **/fastlane/test_output
 
-# Bundle artifact
+# Bundle artifacts
 *.jsbundle
 
-# Ruby / CocoaPods
-**/Pods/
-/vendor/bundle/
+# CocoaPods
+/ios/Pods/
 
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+# Expo
+.expo/
+web-build/
+dist/
 
-# testing
-/coverage
-
-# Yarn
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# API folder environment
+api/.env
+api/.env.local
+api/.env.development.local
+api/.env.test.local
+api/.env.production.local
+
+# Temporary files
+*.tmp
+*.temp
+
+# IDE
+.vscode/
+.idea/
+
+# Logs
+*.log
